--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Plant the Seeds MERN App",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server/server",
     "server": "nodemon server/server",
@@ -21,8 +20,10 @@
   },
   "homepage": "https://github.com/DogukanMere/Plant_the_Seeds_MERN#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.6.0"
   },
   "devDependencies": {
     "concurrently": "^7.4.0",
