--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "server": "nodemon server/server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "data:import": "node server/seeder",
-    "data:destroy": "node server/seeder -d"
+    "importData": "node server/seeder",
+    "destroyData": "node server/seeder -d"
   },
   "repository": {
     "type": "git",
