--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/DogukanMere/Plant_the_Seeds_MERN#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.0.2",
