--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "core-util-is": "^1.0.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
