--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "core-util-is": "^1.0.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.0",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^6.6.5",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "concurrently": "^7.4.0",
