--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
