ready to deploy

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "importData": "node server/seeder",
-    "destroyData": "node server/seeder -d"
+    "destroyData": "node server/seeder -d",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
