--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "multer": "^1.4.5-lts.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "minimatch": ">=3.0.5"
   },
   "devDependencies": {
     "concurrently": "^7.4.0",
